Migrate to full Maven project structure.